[gd_scene load_steps=24 format=3 uid="uid://x64jh1m6wqk"]

[ext_resource type="Script" path="res://Scripts/Objects/shower.gd" id="1_nva8b"]
[ext_resource type="Texture2D" uid="uid://biwx5a2w31ckt" path="res://Assets/Museum/Objects/animated_bathtub_2_new_1_4-7 loop_48x48.png" id="1_wipdd"]
[ext_resource type="AudioStream" uid="uid://qkaqo2iguafg" path="res://Assets/Sounds/Effects/Water_running.ogg" id="3_ua1nl"]
[ext_resource type="AudioStream" uid="uid://cdog2xkg51nod" path="res://Assets/Sounds/Effects/Water_stopping.ogg" id="4_pu2h1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rggp"]
size = Vector2(87, 152)

[sub_resource type="AtlasTexture" id="AtlasTexture_rb45n"]
atlas = ExtResource("1_wipdd")
region = Rect2(1056, 0, 96, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktggv"]
atlas = ExtResource("1_wipdd")
region = Rect2(384, 0, 96, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_op1rr"]
atlas = ExtResource("1_wipdd")
region = Rect2(480, 0, 96, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_srkfg"]
atlas = ExtResource("1_wipdd")
region = Rect2(576, 0, 96, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf1n0"]
atlas = ExtResource("1_wipdd")
region = Rect2(672, 0, 96, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdpby"]
atlas = ExtResource("1_wipdd")
region = Rect2(768, 0, 96, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mf85v"]
atlas = ExtResource("1_wipdd")
region = Rect2(864, 0, 96, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_usdw2"]
atlas = ExtResource("1_wipdd")
region = Rect2(960, 0, 96, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixafc"]
atlas = ExtResource("1_wipdd")
region = Rect2(1056, 0, 96, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1ua5"]
atlas = ExtResource("1_wipdd")
region = Rect2(0, 0, 96, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xin1a"]
atlas = ExtResource("1_wipdd")
region = Rect2(96, 0, 96, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_naosq"]
atlas = ExtResource("1_wipdd")
region = Rect2(192, 0, 96, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w0ho"]
atlas = ExtResource("1_wipdd")
region = Rect2(288, 0, 96, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vav7r"]
atlas = ExtResource("1_wipdd")
region = Rect2(384, 0, 96, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_idok0"]
atlas = ExtResource("1_wipdd")
region = Rect2(480, 0, 96, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya0ch"]
atlas = ExtResource("1_wipdd")
region = Rect2(576, 0, 96, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_4hg8v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rb45n")
}],
"loop": true,
"name": &"Idle_Off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktggv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op1rr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srkfg")
}],
"loop": true,
"name": &"Idle_On",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf1n0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdpby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf85v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usdw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixafc")
}],
"loop": false,
"name": &"Off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1ua5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xin1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naosq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w0ho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vav7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idok0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya0ch")
}],
"loop": false,
"name": &"On",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yrfd0"]
size = Vector2(85, 87)

[node name="Shower" type="StaticBody2D"]
script = ExtResource("1_nva8b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 1)
shape = SubResource("RectangleShape2D_4rggp")

[node name="ShowerAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4hg8v")
animation = &"On"

[node name="ShowerArea" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShowerArea"]
position = Vector2(2.5, 33.5)
shape = SubResource("RectangleShape2D_yrfd0")

[node name="ShowerRunning" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ua1nl")
volume_db = -2.0
max_distance = 500.0
attenuation = 0.378929
parameters/looping = true

[node name="ShowerStopping" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_pu2h1")
volume_db = -2.0
pitch_scale = 1.99

[connection signal="body_entered" from="ShowerArea" to="." method="_on_shower_area_body_entered"]
[connection signal="body_exited" from="ShowerArea" to="." method="_on_shower_area_body_exited"]
